<resources>
    <string name="app_name">Book Hub</string>
    <string name="web_client_id">12160231463-8jejflma82n1uiasis5benpcitsjjqjj.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1957695344477312</string>
    <string name="fb_login_protocol_scheme">1957695344477312</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_fragment">home</string>
    <string name="title_activity_firstfragment">home</string>
    <string name="title_activity_second_fragment">home</string>
    <string name="title_activity_third_fragment">home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="books_pivot">Book Hub</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- BookDetails Activity -->

    <string name="author">"Author"</string>
    <string name="book">"Book Name"</string>
    <string name="Version">"Version"</string>
    <string name="submit">"Submit"</string>

    <!-- Login Activity -->

    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgetpass">Forgot Password ?</string>
    <string name="dowithsocial">Do with Social Networks</string>
    <string name="noaccount">Don\'t have an account yet ?</string>
    <string name="Email_ID">Email ID</string>


    <!-- Registration Activity -->

    //username in LOGIN ACTIVITY
    //password in LOGIN ACTIVITY
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="alreadyAccount">Already have an account? Login Here</string>
    <string name="TnC">Terms &amp; Conditions</string>
    <string name="Privacy">Privacy Policy</string>

    <!-- Upload Activity -->

    <string name="upload">Upload</string>


    <!-- Nav_Header_Home Activity -->

    <string name="guestuser">Guest User</string>
    <string name="number_books">8 Books</string>
    <string name="downloads">69 Downloads</string>

    <!-- home_drawer Activity -->

    <string name="home">Home</string>
    <string name="profile">Profile</string>

    <!-- Upload Activity -->
    <string name="download">Download</string>
    <string name="others">Others</string>
    <string name="logout">Logout</string>
    <string name="share">Share App</string>
    <string name="settings">Settings</string>
    <string name="rateus">Rate Us</string>
    <string name="help">Help &amp; Feedback</string>
    <string name="website">Official Website</string>

    <!-- Update_Profile Activity -->
    <string name="up_name">"Enter your name"</string>
    <string name="up_email">"Enter your email"</string>
    <string name="up_pwd">"Enter new password"</string>
    <string name="up_cpwd">"confirm password"</string>

    <!--Forgot Password Activity -->
    <string name="forgot_pwd_detail">We just need your registered Email Id to send you password reset instructions.</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="back">Back</string>
    <string name="Book_Hub">Book Hub</string>

    <string name="minimum_password">minimum 6 character passsword</string>
    <string name="auth_failed">auth failed</string>
    <string name="google_status_fmt">google status fmt</string>
    <string name="firebase_status_fmt">firebase status fmt</string>
    <string name="signed_out">signed out</string>
    <string name="log_error_occurred">log_error_occurred</string>
    <string name="loading">loading</string>
    <string name="Edition">edition</string>


</resources>
