<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"

    tools:context="com.gmonetix.bookspivot.activity.LoginActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-32dp"
        android:src="@drawable/nlogo1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registration"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_margin="8dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#fff"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edittext_background"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:elevation="4dp"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="14dp"
                android:textColor="@color/white"
                android:textColorHint="@color/black" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="14dp"
                android:textColor="@color/white"
                android:textColorHint="@color/black" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_Rpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textColor="@color/white"
                android:textColorHint="@color/black" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/navy_blue"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/existing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Already have an account? Login Here"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/TnC"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/Privacy"
                android:textColor="@color/black" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />


    </LinearLayout>

</RelativeLayout>
