<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f3f3f3"
    tools:context="com.gmonetix.bookspivot.activity.UploadActivity">

    <include layout="@layout/toolbar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"

        android:foreground="#d0689F38"
        android:scaleType="center"
        android:src="@drawable/bglogin2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="Upload Book"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edittext_background"
            android:elevation="4dp"
            android:focusableInTouchMode="true"

            android:gravity="center"
            android:orientation="vertical">


            <!-- Author Label -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/bookName_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_bookname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/book"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/author_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/author"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>
            <!-- Book name -->

            <!--version -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/version_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Edition"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="No file selected,Click upload to Select Book and Upload "
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
            <Button
                android:id="@+id/buttonupload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/navy_blue"
                android:text="@string/upload"

                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
<!--
<Button
android:id="@+id/buttonchoose"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="16dp"
android:backgroundTint="#FFA3B3B2"
android:text="SELECT FILES"
android:textColor="@color/white"
android:textSize="20sp" />
-->

<!--
>>>>>>> dc38f0b5485fe54b6aa2fdbad76d1d0850d6e402
        android:textColor="@color/white"
        android:textSize="20sp" > -->