<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"

android:fitsSystemWindows="true"
    tools:context="com.gmonetix.bookspivot.activity.LoginActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="101dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/nlogo1" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="login"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_margin="8dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#fff"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/cardview_shadow_end_color"
            android:elevation="5dp"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/Email_ID"
                    android:inputType="text"
                    android:padding="14dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/black_9e9e9e" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edt_Rpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="14dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/black_9e9e9e" />

                <Button

                    android:id="@+id/btnLogin"
                    android:layout_width="122dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:backgroundTint="@color/navy_blue"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="Login"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="08dp"
                    android:gravity="center"
                    android:text="@string/forgetpass"
                    android:textAllCaps="true"
                    android:textColor="@color/black" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:elevation="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:text="or"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="10dp"
                    android:background="#a2a2a2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="use social network"
                    android:textAllCaps="true"
                    android:textColor="#000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:weightSum="2">

                    <ImageView
                        android:id="@+id/google_login_btn"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:padding="8dp"
                        app:srcCompat="@drawable/google" />
                </LinearLayout>

                <TextView
                    android:id="@+id/registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/noaccount"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />
    </LinearLayout>
</RelativeLayout>
